Fix equation watermark visibility: reduce tile size for density, remove fixed attachment

--- a/_sass/layout/_custom.scss
+++ b/_sass/layout/_custom.scss
@@ -99,8 +99,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   background-image: url("/images/equations_bg.png");
   background-repeat: repeat;
-  background-size: 1500px auto;
-  background-attachment: fixed;
+  background-size: 700px auto;
 }
 
 .black-box {
